--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
- - Create a tree of classes and rewrite it in OOP style  X
- - Make an easy *stop proccess* button or something 
- - Make it fun in some way 
+ - Create a tree of classes and rewrite it in OOP style  V
+ - Make an easy *stop proccess* button or something  V
+ - Make it fun in some way  Idk about that one...
  (maybe send coordinates of a ball that bounces or something idk)
- - Tie it in with audio somehow
+ - Tie it in with audio somehow Ain't gonna do that 
+
